--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>My project</h1>
     <div class="box"></div>
-
+    <img src="images/Без названия.png" alt="">
     <script src="./index.js"></script>
 </body>
 </html>
